--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "prettier": "2.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
-    "vite": "^3.2.3"
+    "vite": "^3.2.3",
+    "vite-plugin-pwa": "^0.14.0"
   }
 }
