Add github pages config

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
+  "author": "Istvan Abraham",
+  "homepage": "https://mancsego.github.io/",
   "name": "cv",
-  "private": true,
-  "version": "0.0.0",
+  "private": false,
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
