--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.11",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "prettier": "2.8.0",
     "tailwindcss": "^3.2.4",
