--- a/package.json
+++ b/package.json
@@ -8,34 +8,36 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ./**/*.{ts,tsx,css,md,json} --config ./.prettierrc.json",
     "preview": "vite preview"
   },
   "dependencies": {
-    "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.14",
-    "eslint": "^8.28.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.31.11",
-    "gh-pages": "^4.0.0",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "firebase": "^11.5.0",
     "postcss": "^8.4.19",
-    "prettier": "2.8.0",
+    "prettier": "^3.5.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.3",
-    "vite-plugin-pwa": "^0.14.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.2.2",
+    "vite-plugin-pwa": "^0.21.2"
   }
 }
