--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc && vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ./**/*.{ts,tsx,css,md,json} --config ./.prettierrc.json",
+    "format": "prettier --write ./**/* --config ./.prettierrc",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -32,7 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "firebase": "^11.5.0",
     "postcss": "^8.4.19",
-    "prettier": "^3.5.1",
+    "prettier": "3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.8.2",
