--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.15",
+    "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.13",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
@@ -34,7 +35,6 @@
     "postcss": "^8.4.19",
     "prettier": "3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "tailwindcss": "^3.2.4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.2.2",
