Expose captcha variables

--- a/.github/workflows/pages-deployment.yaml
+++ b/.github/workflows/pages-deployment.yaml
@@ -30,6 +30,8 @@ jobs:
           VITE_FIREBASE_BUCKET=${{ secrets.VITE_FIREBASE_BUCKET }}
           VITE_FIREBASE_MESSAGING=${{ secrets.VITE_FIREBASE_MESSAGING }}
           VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }}
+          VITE_FIREBASE_CAPTCHA_KEY=${{ secrets.VITE_FIREBASE_CAPTCHA_KEY }}
+          VITE_FIREBASE_APPCHECK_DEBUG_TOKEN=${{ secrets.VITE_FIREBASE_APPCHECK_DEBUG_TOKEN }}
           EOF
 
       - name: Build app
